documentacion/obtenida/ARINC 429/driver and software/PC629-1/API/P61W32VB.BAS

Public Declare Function DRV629_RegWrReset Lib "P61W32.DLL" Alias "_DRV629_RegWrReset@4" (ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrRProm Lib "P61W32.DLL" Alias "_DRV629_RegWrRProm@8" (ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrSegSel Lib "P61W32.DLL" Alias "_DRV629_RegWrSegSel@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrTGSG Lib "P61W32.DLL" Alias "_DRV629_RegWrTGSG@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_RegWrTISG Lib "P61W32.DLL" Alias "_DRV629_RegWrTISG@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_Reset Lib "P61W32.DLL" Alias "_DRV629_Reset@4" (ByVal handleval As Long) As Long
Public Declare Function DRV629_SetCID Lib "P61W32.DLL" Alias "_DRV629_SetCID@8" (ByVal cidval As Integer, ByVal index As Integer) As Long
Public Declare Function DRV629_SetHandler Lib "P61W32.DLL" Alias "_DRV629_SetHandler@8" (ByRef funcval As Long, ByVal index As Integer) As Long
Public Declare Function DRV629_SetInitFlag Lib "P61W32.DLL" Alias "_DRV629_SetInitFlag@4" (ByVal flagval As Integer) As Long
Public Declare Function DRV629_SetMask1 Lib "P61W32.DLL" Alias "_DRV629_SetMask1@8" (ByVal mask1val As Integer, ByVal index As Integer) As Long
Public Declare Function DRV629_SetMask2 Lib "P61W32.DLL" Alias "_DRV629_SetMask2@8" (ByVal mask2val As Integer, ByVal index As Integer) As Long
Public Declare Function DRV629_SetPromAddr Lib "P61W32.DLL" Alias "_DRV629_SetPromAddr@8" (ByVal addrval As Long, ByVal index As Integer) As Long
Public Declare Function DRV629_SetTGSG Lib "P61W32.DLL" Alias "_DRV629_SetTGSG@8" (ByVal tgsgval As Integer, ByVal index As Integer) As Long
Public Declare Function DRV629_SetTISG Lib "P61W32.DLL" Alias "_DRV629_SetTISG@8" (ByVal tisgval As Integer, ByVal index As Integer) As Long
Public Declare Function DRV629_Shl Lib "P61W32.DLL" Alias "_DRV629_Shl@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function DRV629_Shr Lib "P61W32.DLL" Alias "_DRV629_Shr@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function DRV629_Srand Lib "P61W32.DLL" Alias "_DRV629_Srand@4" (ByVal value As Integer) As Long
Public Declare Function DRV629_Start Lib "P61W32.DLL" Alias "_DRV629_Start@4" (ByVal handleval As Long) As Long
Public Declare Function DRV629_Stop Lib "P61W32.DLL" Alias "_DRV629_Stop@4" (ByVal handleval As Long) As Long
Public Declare Function DRV629_Strchrr Lib "P61W32.DLL" Alias "_DRV629_Strchrr@8" (ByRef str As String, ByVal value As Integer) As Long
Public Declare Function DRV629_Strcmp Lib "P61W32.DLL" Alias "_DRV629_Strcmp@8" (ByRef str1 As String, ByRef str2 As String) As Long
Public Declare Function DRV629_Strcmpi Lib "P61W32.DLL" Alias "_DRV629_Strcmpi@8" (ByRef str1 As String, ByRef str2 As String) As Long
Public Declare Function DRV629_Strcpy Lib "P61W32.DLL" Alias "_DRV629_Strcpy@8" (ByRef tostr As String, ByRef fromstr As String) As Long
Public Declare Function DRV629_Stricmp Lib "P61W32.DLL" Alias "_DRV629_Stricmp@8" (ByRef str1 As String, ByRef str2 As String) As Long
Public Declare Function DRV629_Strlen Lib "P61W32.DLL" Alias "_DRV629_Strlen@4" (ByRef str As String) As Integer
Public Declare Function DRV629_Strlwr Lib "P61W32.DLL" Alias "_DRV629_Strlwr@4" (ByRef str As String) As Long
Public Declare Function DRV629_Strmfe Lib "P61W32.DLL" Alias "_DRV629_Strmfe@12" (ByRef newname As String, ByRef oldname As String, ByRef ext As String) As Long
Public Declare Function DRV629_Strncmp Lib "P61W32.DLL" Alias "_DRV629_Strncmp@12" (ByRef str1 As String, ByRef str2 As String, ByVal count As Integer) As Long
Public Declare Function DRV629_Strncpy Lib "P61W32.DLL" Alias "_DRV629_Strncpy@12" (ByRef tostr As String, ByRef fromstr As String, ByVal count As Integer) As Long
Public Declare Function DRV629_Strpfe Lib "P61W32.DLL" Alias "_DRV629_Strpfe@12" (ByRef newname As String, ByRef oldname As String, ByRef ext As String) As Long
Public Declare Function DRV629_Strtok Lib "P61W32.DLL" Alias "_DRV629_Strtok@8" (ByRef str As String, ByRef tokenstr As String) As Long
Public Declare Function DRV629_Strupr Lib "P61W32.DLL" Alias "_DRV629_Strupr@4" (ByRef str As String) As Long
Public Declare Function DRV629_TableAddrGet Lib "P61W32.DLL" Alias "_DRV629_TableAddrGet@4" (ByVal index As Integer) As Integer
Public Declare Function DRV629_TableAddrSet Lib "P61W32.DLL" Alias "_DRV629_TableAddrSet@8" (ByVal index As Integer, ByVal value As Integer) As Long
Public Declare Function DRV629_TableIrqGet Lib "P61W32.DLL" Alias "_DRV629_TableIrqGet@4" (ByVal index As Integer) As Integer
Public Declare Function DRV629_TableIrqSet Lib "P61W32.DLL" Alias "_DRV629_TableIrqSet@8" (ByVal index As Integer, ByVal value As Integer) As Long
Public Declare Function DRV629_TablePortGet Lib "P61W32.DLL" Alias "_DRV629_TablePortGet@4" (ByVal index As Integer) As Integer
Public Declare Function DRV629_TablePortSet Lib "P61W32.DLL" Alias "_DRV629_TablePortSet@8" (ByVal index As Integer, ByVal value As Integer) As Long
Public Declare Function DRV629_TableSelGet Lib "P61W32.DLL" Alias "_DRV629_TableSelGet@4" (ByVal index As Integer) As Integer
Public Declare Function DRV629_TableSelSet Lib "P61W32.DLL" Alias "_DRV629_TableSelSet@8" (ByVal index As Integer, ByVal value As Integer) As Long
Public Declare Function DRV629_TableSizeGet Lib "P61W32.DLL" Alias "_DRV629_TableSizeGet@0" () As Integer
Public Declare Function DRV629_TableSizeSet Lib "P61W32.DLL" Alias "_DRV629_TableSizeSet@4" (ByVal value As Integer) As Long
Public Declare Function DRV629_Token Lib "P61W32.DLL" Alias "_DRV629_Token@12" (ByRef fh As Long, ByRef buf As String, ByVal count As Integer) As Long
Public Declare Function DRV629_Tolower Lib "P61W32.DLL" Alias "_DRV629_Tolower@4" (ByVal value As Integer) As Integer
Public Declare Function DRV629_Toupper Lib "P61W32.DLL" Alias "_DRV629_Toupper@4" (ByVal value As Integer) As Integer
Public Declare Function DRV629_Uncheck Lib "P61W32.DLL" Alias "_DRV629_Uncheck@4" (ByVal handleval As Long) As Long
Public Declare Function DRV629_UncheckAll Lib "P61W32.DLL" Alias "_DRV629_UncheckAll@0" () As Long
Public Declare Function DRV629_ValAsciiCmpi Lib "P61W32.DLL" Alias "_DRV629_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Long
Public Declare Function DRV629_ValAsciiCpy Lib "P61W32.DLL" Alias "_DRV629_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Long) As Long
Public Declare Function DRV629_ValAsciiTrimLead Lib "P61W32.DLL" Alias "_DRV629_ValAsciiTrimLead@4" (ByRef buf As String) As Long
Public Declare Function DRV629_ValAsciiTrimTrail Lib "P61W32.DLL" Alias "_DRV629_ValAsciiTrimTrail@4" (ByRef buf As String) As Long
Public Declare Function DRV629_ValFromAscii Lib "P61W32.DLL" Alias "_DRV629_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Long) As Long
Public Declare Function DRV629_ValIncAscii Lib "P61W32.DLL" Alias "_DRV629_ValIncAscii@4" (ByRef asciistr As String) As Long
Public Declare Function DRV629_ValInccAscii Lib "P61W32.DLL" Alias "_DRV629_ValInccAscii@4" (ByRef asciistr As String) As Long
Public Declare Function DRV629_ValIsLower Lib "P61W32.DLL" Alias "_DRV629_ValIsLower@4" (ByVal value As Long) As Long
Public Declare Function DRV629_ValLenAscii Lib "P61W32.DLL" Alias "_DRV629_ValLenAscii@8" (ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function DRV629_ValToAscii Lib "P61W32.DLL" Alias "_DRV629_ValToAscii@16" (ByVal value As Long, ByRef asciistr As String, ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function DRV629_ValToUpper Lib "P61W32.DLL" Alias "_DRV629_ValToUpper@4" (ByVal value As Long) As Long
Public Declare Function DRV629_Version Lib "P61W32.DLL" Alias "_DRV629_Version@0" () As Long
Public Declare Function DRV629_WipeRam Lib "P61W32.DLL" Alias "_DRV629_WipeRam@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_WrALT Lib "P61W32.DLL" Alias "_DRV629_WrALT@8" (ByVal altval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_WrAXT Lib "P61W32.DLL" Alias "_DRV629_WrAXT@8" (ByVal axtval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_WrCID Lib "P61W32.DLL" Alias "_DRV629_WrCID@8" (ByVal cidval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_WrTITGSG Lib "P61W32.DLL" Alias "_DRV629_WrTITGSG@16" (ByVal tival As Integer, ByVal tgval As Integer, ByVal sgval As Integer, ByVal handleval As Long) As Long
Public Declare Function DRV629_XFormat Lib "P61W32.DLL" Alias "_DRV629_XFormat@8" (ByVal value As Integer, ByVal handleval As Long) As Long

'/**
'*
'*  PC629-1 Driver predefined constants.
'*
'**/

Public Const ALT_OFF As Integer = &H0    '//Disables alt, enables primary schedule
Public Const ALT_ON As Integer = &H1 '//Enables alternate schedule

Public Const AXT_OFF As Integer = &H0    '//Disables alternate label extensions
Public Const AXT_ON As Integer = &H1 '//Enables alternate label extensions

Public Const OPT_NONE As Integer = &H0   '//No interrupt options selected
Public Const INT_ERROR As Integer = &H1  '//Interrupts generated on errors

Public Const FORMAT_INDEP As Integer = &H0   '//Selects independent schedule format
Public Const FORMAT_BLOCK As Integer = &H1   '//Selects block schedule format

'/**
'*
'*  PC629-1 Parse Codes.
'*
'**/

Public Const INFOVAL_ORG As Integer = 1 '//ORG information
Public Const INFOVAL_ROM As Integer = 2 '//ROM switch
Public Const INFOVAL_RAM As Integer = 3 '//RAM switch
Public Const INFOVAL_RAMBYTE As Integer = 4 '//RAM byte value
Public Const INFOVAL_RAMWORD As Integer = 5 '//RAM word value
Public Const INFOVAL_RAMDWORD As Integer = 6    '//RAM long word value
Public Const INFOVAL_ROMBYTE As Integer = 7 '//ROM byte value
Public Const INFOVAL_ROMWORD As Integer = 8 '//ROM word value
Public Const INFOVAL_ROMDWORD As Integer = 9    '//ROM long word value
Public Const INFOVAL_OPCODE As Integer = 10 '//Opcode code
Public Const INFOVAL_OPVALUE As Integer = 11    '//Opcode value

'/**
'*
'*  PC629-1 Direct Registers.
'*
'**/

Public Const MEM_PAGE_REG As Integer = &H0   '//Read/write memory page
Public Const PORT_SEL_REG As Integer = &H1   '//Read/write internal port select
Public Const INT_CLR_REG As Integer = &H2    '//Write clears interrupts
Public Const VECT_LSB_REG As Integer = &H2   '//Read interrupt vector LSB
Public Const RESET_REG As Integer = &H3  '//Write triggers master reset
Public Const VECT_MSB_REG As Integer = &H3   '//Read interrupt vector MSB
Public Const REG_ACCESS_LSB As Integer = &H4 '//Read/write internal register LSB
Public Const REG_ACCESS_MSB As Integer = &H5 '//Read internal register MSB
Public Const SEG_SEL_REG As Integer = &H6    '//Write to segment select
Public Const STATUS_REG As Integer = &H6 '//Read status

'/**
'*
'*  PC629-1 Indirect Registers.
'*
'**/

Public Const CID_IREG As Integer = &H0   '//Write channel ID
Public Const TISG_IREG As Integer = &H1  '//Write xmit interval/sync gap
Public Const TGAP_IREG As Integer = &H2  '//Write terminal gap
Public Const MEMCFG_IREG As Integer = &H3    '//Read/write memory configuration
Public Const CTRL_IREG As Integer = &H4  '//Read/write control
Public Const PPROM_IREG As Integer = &H5 '//Read/write personality prom
Public Const ERR_IREG As Integer = &H6   '//Read error register
Public Const LASTWDMON_IREG As Integer = &H7 '//Read last word monitor

'/**
'*
'*  PC629-1 Error Return Values.
'*
'**/
